--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-matplotlib
-pandas
-numpy
-mpl_finance
-pprint
-yahoofinancials
-tqdm
+ipython==7.7.0
+matplotlib==3.1.0
+mpl-finance==0.10.0
+numpy==1.16.4
+pandas==0.24.2
+pprint==0.1
+tqdm==4.32.2
+yahoofinancials==1.5
